[tool.poetry]
name = "garden-errbufferoverfl-me"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
hitherdither = {git = "https://www.github.com/hbldh/hitherdither"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
